# ow-data

./: .gitignore  CLAUDE.md  README.md  heroes.json  maps.json  maps_wiki_page.html  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: release.yml
ow_data/: __init__.py
scripts/: build_heroes.py  fetch_map_backgrounds.py  process_map_backgrounds.py  render_color_grid.py  validate.ts
src/: index.ts  node.ts
