[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ow-data"
version = "0.6.0"
description = "Shared reference data for OverwatchSpotter and OverwatchStatsMCP: hero metadata, map list, portraits, perk icons."
readme = "CLAUDE.md"
requires-python = ">=3.10"
license = { text = "UNLICENSED" }
authors = [{ name = "overlooker-dev" }]

[project.urls]
Repository = "https://github.com/overlooker-dev/ow-data"

[tool.hatch.build.targets.wheel]
packages = ["ow_data"]

# Ship the data files alongside the Python module.
# map_backgrounds: only the width variants ship — map_backgrounds/_source/ (originals) is excluded.
[tool.hatch.build.targets.wheel.force-include]
"heroes.json" = "ow_data/heroes.json"
"maps.json" = "ow_data/maps.json"
"hero_portraits" = "ow_data/hero_portraits"
"hero_icons" = "ow_data/hero_icons"
"perks" = "ow_data/perks"
"map_backgrounds/1920" = "ow_data/map_backgrounds/1920"
"map_backgrounds/1280" = "ow_data/map_backgrounds/1280"
"map_backgrounds/640" = "ow_data/map_backgrounds/640"
"map_backgrounds/320" = "ow_data/map_backgrounds/320"

[tool.hatch.build.targets.sdist]
include = [
    "ow_data",
    "heroes.json",
    "maps.json",
    "hero_portraits",
    "hero_icons",
    "perks",
    "map_backgrounds/1920",
    "map_backgrounds/1280",
    "map_backgrounds/640",
    "map_backgrounds/320",
    "CLAUDE.md",
    "pyproject.toml",
]
